692 - update test classes to use ArgumentCaptor for verification